--- a/code/index.html
+++ b/code/index.html
@@ -16,7 +16,7 @@
 
 	<div class="profile-outline">
 		<div class="about-me">
-			<img src="img/pop-cat.jpg" alt="" class="profile-pic">
+			<img src="img/logo.png" alt="" class="profile-pic">
 		</div>
 	</div>
 
